[package]
name = "tp"
version = "0.1.0"
edition = "2024"
description = "Trusted publishing setup tool for Cargo workspaces"
license = "MIT OR Apache-2.0"

[dependencies]
facet = { git = "https://github.com/facet-rs/facet", branch = "main" }
facet-args = { git = "https://github.com/facet-rs/facet", branch = "main" }
facet-json = { git = "https://github.com/facet-rs/facet", branch = "main" }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
color-eyre = "0.6"
