[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bearcove/tp"

[workspace.dependencies]
facet = { git = "https://github.com/facet-rs/facet", branch = "main" }
facet-args = { git = "https://github.com/facet-rs/facet", branch = "main" }
facet-json = { git = "https://github.com/facet-rs/facet", branch = "main" }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
color-eyre = "0.6"
