[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bearcove/tp"

[workspace.dependencies]
facet = { git = "https://github.com/facet-rs/facet", branch = "main" }
facet-json = { git = "https://github.com/facet-rs/facet", branch = "main" }
facet-toml = { git = "https://github.com/facet-rs/facet", branch = "main" }
figue = { git = "https://github.com/bearcove/figue", branch = "main" }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
color-eyre = "0.6"
dirs = "6"
indicatif = "0.17"
dialoguer = "0.12"
owo-colors = "4"
