[package]
name = "tp"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Trusted publishing setup tool for Cargo workspaces"

[dependencies]
facet.workspace = true
facet-args.workspace = true
facet-json.workspace = true
reqwest.workspace = true
tokio.workspace = true
color-eyre.workspace = true
