[package]
name = "tp"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Trusted publishing setup tool for Cargo workspaces"

[dependencies]
facet.workspace = true
facet-json.workspace = true
facet-toml.workspace = true
figue.workspace = true
reqwest.workspace = true
tokio.workspace = true
futures.workspace = true
color-eyre.workspace = true
dirs.workspace = true
indicatif.workspace = true
dialoguer.workspace = true
owo-colors.workspace = true
